[package]
name = "personaliz-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "personaliz_desktop_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

strip-ansi-escapes = "0.2"

uuid = { version = "1", features = ["v4"] }

rusqlite = { version = "0.31", features = ["bundled"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

chrono = "0.4"

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
debug = 0
